--- a/src/app/financiamento/extrato-fgts/extrato-fgts.component.html
+++ b/src/app/financiamento/extrato-fgts/extrato-fgts.component.html
@@ -5,30 +5,25 @@
       <table class="table  table-striped table-condensed">
         <thead>
           <tr>
-            <th class="col-1">N</th>
-            <th class="text-right">Saldo</th>
-            <th class="text-right">Correção TR</th>
+            <th class="col-1">Mês</th>
+            <th class="text-right">Saldo Inicial</th>
+            <th class="text-right">Rendimentos</th>
             <th class="text-right">Créditos</th>
             <th class="text-right">Resgate</th>
             <th class="text-right">Total FGTS</th>
-            <th class="text-right">Variação</th>
-            <th class="text-right">Variação VP</th>
           </tr>
         </thead>
         <tbody>
-          <tr [ngClass]="{ 'danger' : p.Resgate > 0 }" *ngFor="let p of financiamento.ExtratoFgts; let i=index">
+          <tr [ngClass]="{ 'danger' : ext.Resgate > 0 }" *ngFor="let ext of extrato; let i=index">
             <td>{{i}}</td>
-            <td class="text-right">{{p.Saldo | number:'1.2-2' }}</td> 
-            <td class="text-right">{{p.CorrecaoTR | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.Creditos | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.Resgate | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.TotalFgts | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.Variacao | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.VariacaoVP | number:'1.2-2' }}</td>
+            <td class="text-right">{{ext.FgtsSaldoInicial() | number:'1.2-2' }}</td> 
+            <td class="text-right">{{ext.RendimentoFgts | number:'1.2-2' }}</td>
+            <td class="text-right">{{ext.DepositoFgts | number:'1.2-2' }}</td>
+            <td class="text-right">{{ext.Resgate | number:'1.2-2' }}</td>
+            <td class="text-right">{{ext.MontanteFgts | number:'1.2-2' }}</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 </div>
-
