Creating a config file to centralize financiamento

--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -64,7 +64,7 @@
             </div>
             <div *ngIf="saveScreen">
               <div class="col-lg-12">
-                <!--<app-financiamento-save [financiamento]='financiamento'></app-financiamento-save>-->
+                <app-financiamento-save [financiamento]='financiamento'></app-financiamento-save>
               </div>
             </div>
           </div>      
