--- a/src/app/financiamento/fgts/fgts.component.html
+++ b/src/app/financiamento/fgts/fgts.component.html
@@ -5,14 +5,14 @@
       <label>Saldo FGTS</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="usuario.FGTS" type="number" class="form-control input-sm" min="0" step="1000">
+        <input [(ngModel)]="fgtsConfig.FGTS" type="number" class="form-control input-sm" min="0" step="1000">
       </div>
     </div>
     <div class="form-group">
       <label>Expectativa de crescimento salarial anual</label>
       <div class="input-group">
-        <input [(ngModel)]="usuario.crescimentoSalarial" type="number" class="form-control input-sm" step="0.01">
-        <span class="input-group-addon percent">{{ usuario.crescimentoSalarial | percent:'1.3-3' }}</span>              
+        <input [(ngModel)]="fgtsConfig.CrescimentoSalarial" type="number" class="form-control input-sm" step="0.01">
+        <span class="input-group-addon percent">{{ fgtsConfig.CrescimentoSalarial | percent:'1.3-3' }}</span>              
       </div>
     </div>
       <div class="form-group">
