Solving some financiamento bugs

--- a/src/app/financiamento/fgts/fgts.component.html
+++ b/src/app/financiamento/fgts/fgts.component.html
@@ -5,7 +5,7 @@
       <label>Saldo FGTS</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="fgtsConfig.FGTS" type="number" class="form-control input-sm" min="0" step="1000">
+        <input [(ngModel)]="fgtsConfig.Fgts" type="number" class="form-control input-sm" min="0" step="1000">
       </div>
     </div>
     <div class="form-group">
@@ -24,7 +24,7 @@
         <label>Novos Créditos de FGTS</label>
         <select (change)="onChangePosterior($event.target.value)" class="form-control input-sm">
           <option value="1">Abater do saldo devedor</option>
-          <option value="2">Abater das próximas parcela</option>
+          <option value="2">Abater das próximas parcelas</option>
           <option value="0">Não usar mais</option>
         </select>
       </div>
