--- a/src/app/financiamento/tabela-vpl/tabela-vpl.component.html
+++ b/src/app/financiamento/tabela-vpl/tabela-vpl.component.html
@@ -13,7 +13,7 @@
             <th class="text-right">Seguros</th>
             <th class="text-right">Parcela</th>
             <th class="text-right">Parcela Descontada</th>
-            <th class="text-right">Resgate FGTS</th>
+            <th class="text-right" [hidden]="!fgts">Resgate FGTS</th>
             <th class="text-right">Dívida Atualizada</th>
             <th class="text-right">Valor Imovel</th>
             <th class="text-right">Patrimônio</th>
@@ -30,7 +30,7 @@
             <td class="text-right">{{ext.Parcela.Seguros | number:'1.2-2' }}</td>
             <td class="text-right">{{ext.Parcela.Parcela() | number:'1.2-2' }}</td>
             <td class="text-right">{{ext.Parcela.ParcelaDescontada() | number:'1.2-2' }}</td>
-            <td class="text-right">{{ext.Resgate | number:'1.2-2' }}</td>
+            <td class="text-right" [hidden]="!fgts">{{ext.Resgate | number:'1.2-2' }}</td>
             <td class="text-right">{{ext.SaldoAtual | number:'1.2-2' }}</td> 
             <td class="text-right">{{ext.ValorImovel | number:'1.2-2' }}</td>
             <td class="text-right">{{ext.Patrimonio() | number:'1.2-2' }}</td>
