--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -38,13 +38,13 @@
               </div>
               <div *ngIf="usuario.usaFGTS">
                 <div class="col-lg-4">
-                  <!--<app-fgts [fgtsConfig]="fgtsConfig"></app-fgts>-->
+                  <app-fgts [fgtsConfig]="fgtsConfig"></app-fgts>
                 </div>
               </div>    
             </div>            
             <div *ngIf="fluxoDeCaixa">
               <div class="col-lg-12">
-                <app-tabela-vpl [extrato]="extrato"></app-tabela-vpl>
+                <app-tabela-vpl [fgts]="isUsingFgts"[extrato]="extrato"></app-tabela-vpl>
               </div>         
             </div>
             <div *ngIf="resultado">
