Hidding parcela descontada when posterior is not 2

--- a/src/app/financiamento/fgts/fgts.component.html
+++ b/src/app/financiamento/fgts/fgts.component.html
@@ -25,7 +25,7 @@
         <select (change)="onChangePosterior($event.target.value)" class="form-control input-sm">
           <option value="1">Abater do saldo devedor</option>
           <option value="2">Abater das próximas parcelas</option>
-          <option value="0">Não usar mais</option>
+          <option value="0" selected>Não usar mais</option>
         </select>
       </div>
   </div>
