--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -1,19 +1,19 @@
 <div class="row">
     <div class="col-lg-2">
-      <app-formulario [title]="'Financiamento'"
+      <formulario [title]="'Financiamento'"
         (onCalcular)="onCalcular($event)"
         (onFgts)="onFgts($event)">
-      </app-formulario>
+      </formulario>
     </div>
     <div *ngIf="!calculado">
       <div class="col-lg-3">
-        <app-financiamento-propriedades 
+        <financiamento-propriedades 
           [config]="financiamentoConfig">
-        </app-financiamento-propriedades>
+        </financiamento-propriedades>
       </div>
       <div *ngIf="usuario.usaFGTS">
         <div class="col-lg-3">
-          <app-fgts [fgtsConfig]="fgtsConfig"></app-fgts>
+          <fgts-propriedades [fgtsConfig]="fgtsConfig"></fgts-propriedades>
         </div>
       </div>
     </div>
@@ -32,39 +32,39 @@
           <div class="row">
             <div *ngIf="avancado">
               <div class="col-lg-4">
-                <app-financiamento-propriedades  
+                <financiamento-propriedades  
                   [config]="financiamentoConfig">        
-                </app-financiamento-propriedades>
+                </financiamento-propriedades>
               </div>
               <div *ngIf="usuario.usaFGTS">
                 <div class="col-lg-4">
-                  <app-fgts [fgtsConfig]="fgtsConfig"></app-fgts>
+                  <fgts-propriedades [fgtsConfig]="fgtsConfig"></fgts-propriedades>
                 </div>
               </div>    
             </div>            
             <div *ngIf="fluxoDeCaixa">
               <div class="col-lg-12">
-                <app-tabela-vpl [naoUsaFgts]="isUsingFgts" [posterior]="posterior" [extrato]="extrato"></app-tabela-vpl>
+                <extrato-financiamento [naoUsaFgts]="isUsingFgts" [posterior]="posterior" [extrato]="extrato"></extrato-financiamento>
               </div>         
             </div>
             <div *ngIf="resultado">
               <div class="col-lg-5">
-                <!--<app-resultado [financiamento]="financiamento"></app-resultado>-->
+                <!--<resultado-financiamento [financiamento]="financiamento"></resultado-financiamento>-->
               </div>
               <div class="col-lg-7">
                 <div>
-                  <!--<app-grafico-financiamento-2 [financiamento]="financiamento"></app-grafico-financiamento-2>-->
+                  <!--<grafico-financiamento [financiamento]="financiamento"></grafico-financiamento>-->
                 </div>
               </div>
             </div>
             <div *ngIf="fgts">
               <div class="col-lg-12">
-                <app-extrato-fgts [extrato]="extrato"></app-extrato-fgts>
+                <extrato-fgts [extrato]="extrato"></extrato-fgts>
               </div>
             </div>
             <div *ngIf="saveScreen">
               <div class="col-lg-12">
-                <app-financiamento-save [financiamento]='properties'></app-financiamento-save>
+                <financiamento-save [financiamento]='properties'></financiamento-save>
               </div>
             </div>
           </div>      
