--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -21,7 +21,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
             <div *ngIf="calculado">
-              <button id="configuracoes" class="btn btn-sm btn-warning text-center" (click)="exibeAvancado()">Configurações</button>
+              <button id="configuracoes" class="btn btn-sm btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
               <button id="resultado" class="btn btn-sm btn-warning text-center" (click)="exibeResultado()">Resultado</button>
               <button id="fdc" class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
               <button id="fgts" class="btn btn-sm btn-warning text-center" (click)="exibeExtrato()">Extrato FGTS</button>
@@ -29,31 +29,23 @@
             </div>
         </div>        
         <div class="panel-body">
-          <div class="row">
-            <div *ngIf="avancado">
-              <div class="col-lg-4">
-                <financiamento-propriedades  
-                  [config]="financiamentoConfig">        
-                </financiamento-propriedades>
-              </div>
-              <div *ngIf="usuario.usaFGTS">
-                <div class="col-lg-4">
-                  <fgts-propriedades [fgtsConfig]="fgtsConfig"></fgts-propriedades>
-                </div>
-              </div>    
-            </div>            
+          <div class="row">           
+            <div *ngIf="grafico">
+              <div class="col-lg-12">
+                  <grafico-financiamento [extrato]="extrato"></grafico-financiamento>
+              </div>         
+            </div>
             <div *ngIf="fluxoDeCaixa">
               <div class="col-lg-12">
                 <extrato-financiamento [naoUsaFgts]="isUsingFgts" [posterior]="posterior" [extrato]="extrato"></extrato-financiamento>
               </div>         
             </div>
             <div *ngIf="resultado">
-              <div class="col-lg-5">
-                <!--<resultado-financiamento [financiamento]="financiamento"></resultado-financiamento>-->
+              <div class="col-lg-6">
+                <resultado-parcial [extrato]="extrato" [user]="usuario" [fgtsConfig]="fgtsConfig"></resultado-parcial>
               </div>
-              <div class="col-lg-7">
+              <div class="col-lg-6">
                 <div>
-                  <!--<grafico-financiamento [financiamento]="financiamento"></grafico-financiamento>-->
                 </div>
               </div>
             </div>
