--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -24,7 +24,7 @@
               <button id="configuracoes" class="btn btn-sm btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
               <button id="resultado" class="btn btn-sm btn-warning text-center" (click)="exibeResultado()">Resultado</button>
               <button id="fdc" class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
-              <button id="fgts" class="btn btn-sm btn-warning text-center" (click)="exibeExtrato()">Extrato FGTS</button>
+              <button id="fgts" class="btn btn-sm btn-warning text-center" *ngIf="isUsingFgts" (click)="exibeExtrato()">Extrato FGTS</button>
               <button id="save" class="btn btn-sm btn-primary text-center" (click)="exibeSaveScreen()">Salvar</button>
             </div>
         </div>        
