--- a/src/app/financiamento/resultado-parcial/resultado-parcial.component.html
+++ b/src/app/financiamento/resultado-parcial/resultado-parcial.component.html
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
 <div class="panel-heading patri-main-1">
     <h4 class="panel-title">
-    <a data-toggle="collapse" href="#finPatrimonio">Patrimônio: <span class="pull-right">R$ {{patrimonioTotal | number: '1.2-2'}}</span></a>
+    <a data-toggle="collapse" href="#finPatrimonio">Patrimônio: <span class="pull-right">R$ {{Patrimonio() | number: '1.2-2'}}</span></a>
     </h4>
 </div>
 <div id="finPatrimonio" class="panel-collapse collapse">
@@ -10,11 +10,11 @@
     <div class="list-group-item patri-main-2">Valor do imóvel <span class="pull-right">R$ {{valorImovel | number:'1.2-2'}}</span></div>
     <div *ngIf="user.usaFGTS">
         <a href="#finPatriFgts" class="list-group-item patri-main-2" data-toggle="collapse">
-            Fgts:<span class="pull-right">R$ {{fgtsTotal | number:'1.2-2'}}</span>
+            Fgts:<span class="pull-right">R$ {{FgtsPatrimonio() | number:'1.2-2'}}</span>
         </a>
         <div class="list-group collapse" id="finPatriFgts">
-            <div class="list-group-item patri-main-3">Aportes <span class="pull-right">R$ {{aportesFgts | number:'1.2-2'}}</span></div>
-            <div class="list-group-item patri-main-3">Rendimentos <span class="pull-right">R$ {{rendimentosFgts | number:'1.2-2'}}</span></div>
+            <div class="list-group-item patri-main-3">Aportes <span class="pull-right">R$ {{fgtsAportesPatrimonio | number:'1.2-2'}}</span></div>
+            <div class="list-group-item patri-main-3">Rendimentos <span class="pull-right">R$ {{fgtsRendimentosPatrimonio | number:'1.2-2'}}</span></div>
         </div>
     </div>
     </ul>
@@ -24,7 +24,7 @@
 <div class="panel panel-default">
 <div class="panel-heading cust-main-1">
     <h4 class="panel-title">
-    <a data-toggle="collapse" href="#finCusto">Custo:<span class="pull-right">R$ {{custoTotal | number:'1.2-2'}}</span></a>
+    <a data-toggle="collapse" href="#finCusto">Custo:<span class="pull-right">R$ {{Custo() | number:'1.2-2'}}</span></a>
     </h4>
 </div>
 <div id="finCusto" class="panel-collapse collapse">
@@ -34,11 +34,11 @@
 
     <div *ngIf="user.usaFGTS">
         <a href="#finCustFgts" class="list-group-item cust-main-2" data-toggle="collapse">
-            Fgts:<span class="pull-right">R$ {{aportesFgts + fgtsEntrada| number:'1.2-2'}}</span>
+            Fgts:<span class="pull-right">R$ {{FgtsCusto() | number:'1.2-2'}}</span>
         </a>
         <div class="list-group collapse" id="finCustFgts">
             <div *ngIf="fgtsConfig.Entrada" class="list-group-item cust-main-3">Entrada <span class="pull-right">R$ {{fgtsEntrada | number:'1.2-2'}}</span></div>
-            <div class="list-group-item cust-main-3">Aportes <span class="pull-right">R$ {{aportesFgts | number:'1.2-2'}}</span></div>
+            <div class="list-group-item cust-main-3">Aportes <span class="pull-right">R$ {{fgtsAportesCusto | number:'1.2-2'}}</span></div>
         </div>
     </div>
     </ul>
@@ -46,6 +46,6 @@
 </div>
 <div class="panel panel-default">
 <div class="panel-heading">
-    <div class="panel-title">Patrimônio líquido:<span class="pull-right">R$ {{patrimonioLiquido | number:'1.2-2'}}</span></div>
+    <div class="panel-title">Patrimônio líquido:<span class="pull-right">R$ {{PatrimonioLiquido() | number:'1.2-2'}}</span></div>
 </div>
 </div>
