--- a/src/app/financiamento/grafico-financiamento/grafico-financiamento.component.html
+++ b/src/app/financiamento/grafico-financiamento/grafico-financiamento.component.html
@@ -16,7 +16,7 @@
     <div class="panel-body">
         <div class="imgwrapper">
             <figure class="figure">
-            <div id="oi" style="width:600;height:400px;" class="figure-img img-fluid rounded"></div>
+            <div id="grafico" style="width:600;height:400px;" class="figure-img img-fluid rounded"></div>
             </figure>
         </div>
     </div>
