--- a/src/app/financiamento/formulario/formulario.component.html
+++ b/src/app/financiamento/formulario/formulario.component.html
@@ -1,29 +1,29 @@
 <div class="panel panel-default">
-  <div class="panel-heading">{{ title }}</div>
+<div class="panel-heading">{{ title }}</div>
   <div class="panel-body">
     <div class="form-group">  
-      <label>Valor do imóvel:</label>
+      <label>Valor do imóvel</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="valorImovel" type="number" class="form-control input-sm" id="valor-imovel" min="0" step="25000" autofocus>
+        <input [(ngModel)]="valorImovel" type="number" class="form-control input" id="valor-imovel" min="0" step="25000" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label>Disponibilidade</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="disponivel" type="number" class="form-control input-sm" id="disponibilidade" min="0" step="5000">
+        <input [(ngModel)]="disponivel" type="number" class="form-control input" id="disponibilidade" min="0" step="5000">
       </div>
     </div>
     <div class="form-group">
       <label>Prestações</label>
-      <input [(ngModel)]="prestacoes" type="number" class="form-control input-sm" id="prestacoes" min="0" max="480">
+      <input [(ngModel)]="prestacoes" type="number" class="form-control input" id="prestacoes" min="0" max="480">
     </div>
     <div class="form-group">
       <label>Renda Mensal</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="renda" type="number" class="form-control input-sm" id="renda" min="0" step="100">
+        <input [(ngModel)]="renda" type="number" class="form-control input" id="renda" min="0" step="100">
       </div>
     </div>
     <div class="form-group">
@@ -34,7 +34,7 @@
       <label><input [(ngModel)]="possuiFgtsModel" type="checkbox" value="true"> Possui FGTS</label>
     </div>
     <div class="form-group text-center">
-      <button type="button" [disabled]="!validaForm()" (click)="calcular()" class="btn btn-primary btn-sm">Calcular</button>
+      <button type="button" [disabled]="!validaForm()" (click)="calcular()" class="btn btn-primary">Calcular</button>
     </div>
   </div>
 </div>
