Making buttons bigger

--- a/src/app/aluguel/aluguel.component.html
+++ b/src/app/aluguel/aluguel.component.html
@@ -6,9 +6,9 @@
     <div class="panel panel-default">
       <div class="panel-heading">
           <div *ngIf="calculado">
-            <button id="grafico" class="btn btn-sm btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
-            <button id="fdc" class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
-            <button id="resultado" class="btn btn-sm btn-warning text-center" (click)="exibeResultado()">Resultado</button>
+            <button id="grafico" class="btn btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
+            <button id="fdc" class="btn btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
+            <button id="resultado" class="btn btn-warning text-center" (click)="exibeResultado()">Resultado</button>
           </div>
       </div>        
       <div class="panel-body">
