--- a/src/app/financiamento/formulario/formulario.component.html
+++ b/src/app/financiamento/formulario/formulario.component.html
@@ -5,25 +5,25 @@
       <label>Valor do imóvel</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="valorImovel" type="number" class="form-control input" id="valor-imovel" min="0" step="25000" autofocus>
+        <input [textMask]="{mask: mask}" [(ngModel)]="valorImovel" type="text" class="form-control" id="valor-imovel" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label>Disponibilidade</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="disponivel" type="number" class="form-control input" id="disponibilidade" min="0" step="5000">
+        <input [textMask]="{mask: mask}" [(ngModel)]="disponivel" type="text" class="form-control" id="disponibilidade">
       </div>
     </div>
     <div class="form-group">
       <label>Prestações</label>
-      <input [(ngModel)]="prestacoes" type="number" class="form-control input" id="prestacoes" min="0" max="480">
+      <input [(ngModel)]="prestacoes" type="number" class="form-control" id="prestacoes" min="0" max="480">
     </div>
     <div class="form-group">
       <label>Renda Mensal</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="renda" type="number" class="form-control input" id="renda" min="0" step="100">
+        <input [textMask]="{mask: mask}" [(ngModel)]="renda" type="text" class="form-control" id="renda">
       </div>
     </div>
     <div class="form-group">
