--- a/src/app/global-configuration/global-configuration.component.html
+++ b/src/app/global-configuration/global-configuration.component.html
@@ -4,76 +4,65 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <div class="row">
-          <div class="col-lg-1"></div>
           <div class="col-lg-4">
+            <form>
+              <div class="form-group">
+                <label>Selecione</label>
+                <select name="configuration" class="form-control" [(ngModel)]="configuration" (change)="onPropertyChange(configuration)">
+                  <option *ngFor="let config of configurations" [ngValue]="config">{{config.Identificacao}}</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Identificador</label>
+                <input [disabled]="isAdicionado" class="form-control" [(ngModel)]="Identificacao" name="iden" placeholder="Digite um nome/código para identificar">
+              </div>
+              <div class="form-group">
+                <label>Descrição</label>
+                <textarea [disabled]="isAdicionado" class="form-control" [(ngModel)]="Descricao" name="desc" rows="6">{{description}}</textarea>
+              </div>
+              <div class="form-group">
+                <button [disabled]="isAdicionado" (click)="adicionar()"class="btn btn-primary">Salvar</button>
+                <button [disabled]="isAdicionado" (click)="sugerir()" class="btn btn-primary">Sugerir</button>
+              </div>
+            </form>
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-3">
             <div class="form-group">  
               <label>Taxa referencial</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Referencial" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Referencial | percent:'1.3-3' }} am</span>
-              </div>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaReferencial" class="form-control">
             </div>
             <div class="form-group">
               <label>Taxa interna de retorno</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Interna" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Interna | percent:'1.3-3' }} am</span>
-              </div>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaInterna" class="form-control">
             </div>
             <div class="form-group">
-              <label>Taxa de atualização da prestação do aluguel anual</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Aluguel" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Aluguel | percent:'1.3-3' }} aa</span>
-              </div>
+              <label>Taxa de atualização da prestação do aluguel</label>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaAluguel" class="form-control">
             </div>
             <div class="form-group">
-              <label>Taxa de valorização de imóvel mensal</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Imovel" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Imovel | percent:'1.3-3' }} am</span>
-              </div>
+              <label>Taxa de valorização de imóvel</label>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaImovel" class="form-control">
             </div>
             <div class="form-group">
-              <label>Rendimento do Fundo de Garantia ao mes</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Fundo" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Fundo | percent:'1.3-3' }} am</span>
-              </div>
+              <label>Taxa de rendimento do Fundo de Garantia</label>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaFundo" class="form-control">
             </div>
           </div>  
-          <div class="col-lg-2"></div>        
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="form-group">
-              <label>Taxa de rentabilidade de aplicação financeira ao ano</label>
-              <div class="input-group">
-                <input type="number" [(ngModel)]="configuration.Rentabilidade" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.Rentabilidade | percent:'1.3-3' }} aa</span>
-              </div>
+              <label>Taxa de rentabilidade de aplicação financeira</label>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaRentabilidade" class="form-control">
             </div>
             <div class="form-group">
               <label>Imposto de renda sobre rendimentos</label>
-               <div class="input-group"> 
-                <input type="number" [(ngModel)]="configuration.ImpostoRenda" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.ImpostoRenda | percent:'1.3-3' }}</span>
-               </div>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaImpostoRenda" class="form-control">
             </div>
             <div class="form-group">
-              <label>Taxa de rentabilidade líquida ao ano</label>
-              <div class="input-group">
-                <input [disabled]="true" [ngModel]="configuration.RentabilidadeLiquida()" type="number" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.RentabilidadeLiquida() | percent:'1.3-3' }} aa</span>
-              </div>
-            </div>
-            <div class="form-group">
-              <label>Taxa de rentabilidade líquida ao mês</label>
-              <div class="input-group">
-                <input [disabled]="true" [ngModel]="configuration.RentabilidadeLiquidaMensal()" type="number" class="form-control" step="0.01">
-                <span class="input-group-addon percent">{{ configuration.RentabilidadeLiquidaMensal() | percent:'1.3-3' }} am</span>
-              </div>
+              <label>Taxa de juros sobre financiamentos</label>
+              <input type="text" [textMask]="{mask: mask}" [(ngModel)]="TaxaJuros" class="form-control">
             </div>
           </div>
-          <div class="col-lg-1"></div>
         </div>
       </div>
     </div>          
