--- a/src/app/financiamento/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento/financiamento-propriedades/financiamento-propriedades.component.html
@@ -2,11 +2,10 @@
   <div class="panel-heading">Configurações</div>
   <div class="panel-body">      
     <div class="form-group">
-      <label>Juros Anuais</label>
-      <div class="input-group">
-        <input [(ngModel)]="config.JurosAnuais" type="number" class="form-control input" step="0.01">
-        <span class="input-group-addon percent">{{ config.JurosAnuais | percent:'1.3-3' }}</span>
-      </div>
+      <label>Taxas</label>
+      <select name="configuration" class="form-control" [(ngModel)]="configuration.Id" (change)="onPropertyChange(configuration)">
+        <option *ngFor="let config of configurations" [ngValue]="config.Id">{{config.Identificacao}}</option>
+      </select>
     </div>
     <div class="form-group">  
       <label>Taxa Admnistrativa</label>
