--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -8,7 +8,7 @@
     <div *ngIf="!calculado">
       <div class="col-lg-3">
         <financiamento-propriedades 
-          [config]="financiamentoConfig">
+          [config]="financiamentoConfig" [configuration]="configuration">
         </financiamento-propriedades>
       </div>
       <div *ngIf="usuario.usaFGTS">
