--- a/src/app/global-configuration/global-configuration.component.html
+++ b/src/app/global-configuration/global-configuration.component.html
@@ -21,8 +21,7 @@
                 <textarea [disabled]="isAdicionado" class="form-control" [(ngModel)]="Descricao" name="desc" rows="6">{{description}}</textarea>
               </div>
               <div class="form-group">
-                <button [disabled]="isAdicionado" (click)="adicionar()"class="btn btn-primary">Salvar</button>
-                <button [disabled]="isAdicionado" (click)="sugerir()" class="btn btn-primary">Sugerir</button>
+                <button [disabled]="!isValid()" (click)="adicionar()"class="btn btn-primary">Salvar</button>
               </div>
             </form>
           </div>
