Changing configuration route to taxas

--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -5,7 +5,7 @@
   <li routerLinkActive="active"><a [routerLink]="['/financiamento']">{{financiamento}}</a></li>
   <li routerLinkActive="active"><a [routerLink]="['/aluguel']">{{aluguel}}</a></li>
   <li routerLinkActive="active"><a [routerLink]="['/consorcio']">{{consorcio}}</a></li>
-  <li routerLinkActive="active"><a [routerLink]="['/configuracoes']">{{global}}</a></li>
+  <li routerLinkActive="active"><a [routerLink]="['/taxas']">{{global}}</a></li>
 </ul>
 
 
